--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ h3{
 h5{
     font-size: 15px;
 }
+time{
+    font-size: 10px;
+    display: flex;
+    justify-content: end;
+}
     /* utils */
 .p-left5px{
     padding-left: 5px;
@@ -30,15 +35,23 @@ h5{
     border-bottom: 3px solid rgb(248,248,248);
     padding: 5px;
 }
+.h-70{
+    height: 70%;
+}
+/* colors */
 .grey{
     color: rgb(177,177,177);
 }
 .dark-blue{
     color: rgb(91,130,156);
-}   
-.h-70{
-    height: 70%;
 }
+.bg-sent{
+    background-color: rgb(213,249,186);
+}   
+.bg-received{
+    background-color: white;
+}
+
     /* BODY */
 .chat-container{
     height: 90%;
@@ -90,6 +103,18 @@ h5{
     width: 100%;
     height: 76%;
     background-image:url(../img/mine.jpg);
+}
+.msg-container{
+    display: flex;   
+}
+.msg{
+    min-width: 200px;
+}
+.received{
+    justify-content: end;
+}
+.sent{
+    justify-content: flex-start;
 }
 .new-message{
     height: 12%;
