--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,10 @@ time{
     width: 100%;
     height: 76%;
     background-image:url(../img/mine.jpg);
+    display: none;
+}
+.d-active{
+    display: block;
 }
 .msg-container{
     display: flex;   
